--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
 <body>
 
   <div class="container">
+
+  
     <div class="checkbox">
-      <h1>Собери сам</h1> 
-      <p>Here you can collect your gift set</p>
+      <h1>СОБРАТЬ СВОЙ ПОДАРОК</h1>
       <form name="productsForm" id="products-form" class="form-horizontal">
       </form>
       <h2><div id="totalPrice"></div></h2>
     </div>
+
+  
+
   </div>
 
 </body>
